--- a/app/src/main/res/layout/item_fast_message.xml
+++ b/app/src/main/res/layout/item_fast_message.xml
@@ -6,16 +6,42 @@
     android:orientation="horizontal"
     android:paddingBottom="10dp">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:orientation="vertical">
+        android:layout_marginLeft="10dp">
 
+        <View
+            style="@style/style_split_vline"
+            android:layout_gravity="center_horizontal" />
 
         <FrameLayout
             android:layout_width="46dp"
             android:layout_height="50dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:visibility="invisible">
+
+                <ImageView
+                    android:id="@+id/img_point"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/fast_msg_point" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_vertical"
+                    android:layout_toRightOf="@+id/img_point"
+                    android:background="@color/app_text_color" />
+
+            </RelativeLayout>
+
 
             <ImageView
                 android:layout_width="match_parent"
@@ -37,12 +63,8 @@
 
         </FrameLayout>
 
-        <View
-            style="@style/style_split_vline"
-            android:layout_gravity="center_horizontal" />
 
-
-    </LinearLayout>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
