--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="radiobutton_txt_select_un">#ffffff</color>
 
     <color name="app_text_gray">#818181</color>
+    <color name="app_text_gray_2">#9e9e9e</color>
+
+
 </resources>
