--- a/cdcommon/src/main/res/values/colors.xml
+++ b/cdcommon/src/main/res/values/colors.xml
@@ -59,7 +59,7 @@
 
     <color name="updateProgress">#0eb8ae</color>
 
-<!--caijianView-->
+    <!--caijianView-->
     <color name="white_translucent">#AAFFFFFF</color>
     <color name="black_translucent">#B0000000</color>
 
@@ -72,7 +72,7 @@
     <!--app模块 相同 -->
 
     <color name="line_gray_cd">#dedede</color>
-    <color name="text_black_cd">#484848</color>
-
+    <color name="text_black_cd">#3a3a3a</color>
+    <color name="page_bg">#fafcff</color>
 
 </resources>
