--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
 
     <color name="app_text_gray">#818181</color>
     <color name="app_text_gray_2">#9e9e9e</color>
+    <color name="app_text_gray_3">#595a6e</color>
 
 
 </resources>
