--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="title_radiobutton_txt">16sp</dimen>
     <dimen name="msg_state_size">14sp</dimen>
     <dimen name="msg_title">16sp</dimen>
+    <dimen name="market_bg_radius">5dp</dimen>
 </resources>
