--- a/app/src/main/res/layout/layout_to_bbs.xml
+++ b/app/src/main/res/layout/layout_to_bbs.xml
@@ -20,6 +20,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="sdfsdfsd"
+                android:textColor="@color/app_text_gray_3"
+                android:textSize="12sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:text="sdfsdfsd"
@@ -29,12 +39,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="2dp"
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:text="sdfsdfsd"
-                android:textColor="#3a3a3a"
-                android:textSize="14sp" />
+                android:textColor="@color/app_text_gray"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
@@ -43,16 +53,25 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:text="sdfsdfsd"
+            android:textColor="@color/text_black_cd"
+            android:textSize="17sp" />
 
     </LinearLayout>
 
     <Button
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginLeft="15dp"
-        android:background="@drawable/to_bbs_bg"
-        android:text="@string/in_to_bbs"
+        android:background="@drawable/market_green_bg"
+        android:text="sdfsfs"
         android:textColor="@color/white"
         android:textSize="15sp" />
 
