--- a/cdcommon/src/main/res/layout/empty_view.xml
+++ b/cdcommon/src/main/res/layout/empty_view.xml
@@ -13,12 +13,14 @@
 
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/img"
             android:layout_width="105dp"
             android:layout_height="105dp"
             tools:src="@mipmap/ic_launcher" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
