--- a/app/src/main/res/layout/item_coin_bbs.xml
+++ b/app/src/main/res/layout/item_coin_bbs.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="15dp">
 
@@ -11,15 +12,29 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:text="sdfsdfdsfesdf"
-            android:textColor="@color/text_black_cd"
-            android:textSize="17sp" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/top_1"
+                android:visibility="gone" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="sdfsdfdsfesdf"
+                android:textColor="@color/text_black_cd"
+                android:textSize="17sp" />
+
+        </LinearLayout>
 
         <Button
             android:layout_width="60dp"
