新增 启动图 icon 其它图标修改

--- a/app/src/main/res/layout/item_market_add.xml
+++ b/app/src/main/res/layout/item_market_add.xml
@@ -37,7 +37,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/add_market" />
+        android:src="@drawable/add_market_big" />
 
 
 </LinearLayout>
