--- a/cdcommon/src/main/res/layout/layout_row_info.xml
+++ b/cdcommon/src/main/res/layout/layout_row_info.xml
@@ -14,12 +14,14 @@
         android:paddingTop="20dp">
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/img_left"
             android:layout_width="18dp"
             android:layout_height="18dp"
              />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,6 +37,7 @@
             android:layout_weight="1" />
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -44,6 +47,7 @@
             android:textSize="14sp" />
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/img_right"
             android:layout_width="10dp"
             android:layout_height="15dp"
