--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -30,7 +30,7 @@
                 android:text="@string/edit"
                 android:textColor="@color/white"
                 android:textSize="14sp"
-               />
+                android:visibility="gone" />
 
 
         </FrameLayout>
@@ -56,6 +56,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/img_user_logo"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
                         android:layout_marginBottom="20dp"
@@ -65,13 +66,14 @@
 
 
                     <TextView
+                        android:id="@+id/tv_user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="15dp"
+                        android:text="@string/fast_to_login"
                         android:textColor="@color/white"
-                        android:textSize="17sp"
-                        android:text="@string/fast_to_login" />
+                        android:textSize="17sp" />
 
 
                 </LinearLayout>
@@ -87,6 +89,7 @@
                 <View style="@style/style_split_line" />
 
                 <com.cdkj.baselibrary.views.RowInfoLayout
+                    android:id="@+id/row_comment_bbs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:img_left="@drawable/user_comment"
@@ -96,6 +99,7 @@
                 <View style="@style/style_split_line" />
 
                 <com.cdkj.baselibrary.views.RowInfoLayout
+                    android:id="@+id/row_comment_message"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:img_left="@drawable/user_comment_2"
@@ -105,6 +109,7 @@
                 <View style="@style/style_split_line" />
 
                 <com.cdkj.baselibrary.views.RowInfoLayout
+                    android:id="@+id/row_about"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:img_left="@drawable/user_about"
@@ -114,6 +119,7 @@
                 <View style="@style/style_split_line" />
 
                 <FrameLayout
+                    android:id="@+id/fra_clear_cache"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:background="@drawable/selector_gray">
@@ -128,9 +134,11 @@
                         android:textSize="16sp" />
 
                     <TextView
-                        android:layout_width="50dp"
+                        android:id="@+id/tv_cache"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_gravity="center|right"
+                        android:layout_marginRight="15dp"
                         android:gravity="center"
                         android:text="0M"
                         android:textColor="#ff5757"
@@ -141,6 +149,7 @@
 
 
                 <TextView
+                    android:id="@+id/tv_logout"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_gravity="center|right"
@@ -149,7 +158,8 @@
                     android:gravity="center"
                     android:text="退出登录"
                     android:textColor="#ff5757"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:visibility="gone" />
 
             </LinearLayout>
         </ScrollView>
