--- a/app/src/main/res/layout/activity_nickname_update.xml
+++ b/app/src/main/res/layout/activity_nickname_update.xml
@@ -7,6 +7,7 @@
         android:orientation="vertical">
 
         <EditText
+            android:id="@+id/edit"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@color/white"
