--- a/app/src/main/res/layout/item_fast_message.xml
+++ b/app/src/main/res/layout/item_fast_message.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="horizontal"
-    android:paddingBottom="10dp">
+  >
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -133,6 +133,7 @@
         </LinearLayout>
 
         <TextView
+            android:paddingBottom="10dp"
             android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
