--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -16,7 +16,7 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:orientation="vertical"
@@ -25,26 +25,27 @@
             <TextView
                 android:id="@+id/tv_msg_title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:ellipsize="end"
                 android:maxLines="3"
-                android:text="sdfssdfsdsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsfsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsfsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsffsfsfsdfsdfsfsfsdfsdfsfsfdfsfsf"
-                android:textColor="@color/text_black_cd"
-                android:textSize="@dimen/msg_title" />
+                tools:text="sdfssdfsdsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsfsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsfsdfssdfsdfsfsfsdfsdfsfsfsdfsdfsfsfdfsfsffsfsfsdfsdfsfsfsdfsdfsfsfdfsfsf"
+                tools:textColor="@color/text_black_cd"
+                tools:textSize="@dimen/msg_title" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_gravity="bottom"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_msg_content"
+                    android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="sdfsdfsfsf"
-                    android:textColor="@color/app_text_gray"
-                    android:textSize="@dimen/msg_state_size" />
+                    tools:text="sdfsdfsfsf"
+                    tools:textColor="@color/app_text_gray"
+                    tools:textSize="@dimen/msg_state_size" />
 
                 <View
                     android:layout_width="0dp"
@@ -52,13 +53,14 @@
                     android:layout_weight="1" />
 
                 <TextView
+                    android:id="@+id/tv_collection"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="3"
-                    android:text="分享"
-                    android:textColor="@color/app_text_gray"
-                    android:textSize="@dimen/msg_state_size" />
+                    tools:text="分享"
+                    tools:textColor="@color/app_text_gray"
+                    tools:textSize="@dimen/msg_state_size" />
 
 
             </LinearLayout>
@@ -66,6 +68,7 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/img"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="centerCrop"
