--- a/app/src/main/res/layout/item_message_three_pic.xml
+++ b/app/src/main/res/layout/item_message_three_pic.xml
@@ -26,6 +26,7 @@
         android:weightSum="3">
 
         <ImageView
+            android:id="@+id/img_1"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginRight="10dp"
@@ -34,6 +35,7 @@
             android:src="@drawable/default_pic" />
 
         <ImageView
+            android:id="@+id/img_2"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginRight="10dp"
@@ -42,6 +44,7 @@
             android:src="@drawable/default_pic" />
 
         <ImageView
+            android:id="@+id/img_3"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_weight="1"
@@ -58,7 +61,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_msg_content"
+            android:id="@+id/tv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/app_text_gray"
@@ -71,6 +74,7 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/tv_collection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
