--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="app_main_txt_select_un">#616161</color>
     <color name="app_main_txt_select">#2F93ED</color>
 
-    <color name="radiobutton_txt_select">#595a6e</color>
+    <color name="radiobutton_txt_select">#2F93ED</color>
     <color name="radiobutton_txt_select_un">#ffffff</color>
 
     <color name="app_text_gray">#818181</color>
