--- a/cdcommon/src/main/res/layout/activity_tab.xml
+++ b/cdcommon/src/main/res/layout/activity_tab.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:orientation="vertical"
@@ -7,6 +8,7 @@
         android:layout_height="match_parent">
 
         <android.support.design.widget.TabLayout
+            app:tabIndicatorHeight="2.4dp"
             android:id="@+id/tablayout"
             style="@style/MyTabLayout"
             android:layout_width="match_parent"
