--- a/app/src/main/res/layout/dialog_comment_input.xml
+++ b/app/src/main/res/layout/dialog_comment_input.xml
@@ -12,23 +12,21 @@
             android:layout_height="40dp">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="@dimen/layout_left_interval"
-                android:layout_marginTop="10dp"
+                android:id="@+id/tv_cancel"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
                 android:text="@string/cancel"
                 android:textColor="@color/text_black_cd"
                 android:textSize="14sp" />
 
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/tv_release"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="right"
-                android:layout_marginBottom="10dp"
-                android:layout_marginRight="@dimen/layout_right_interval"
-                android:layout_marginTop="10dp"
+                android:gravity="center"
                 android:text="@string/realse"
                 android:textColor="@color/text_black_cd"
                 android:textSize="14sp" />
@@ -39,14 +37,15 @@
         <View style="@style/style_split_line" />
 
         <EditText
-            android:textColorHint="@color/app_text_gray"
-            android:textColor="@color/text_black_cd"
+            android:id="@+id/edit_comment"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:background="@null"
             android:gravity="top"
-            android:text="回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复"
-            android:padding="10dp" />
+            android:hint="@string/show_your_idea"
+            android:padding="10dp"
+            android:textColor="@color/text_black_cd"
+            android:textColorHint="@color/app_text_gray" />
 
 
     </LinearLayout>
