--- a/app/src/main/res/layout/item_message_commen.xml
+++ b/app/src/main/res/layout/item_message_commen.xml
@@ -17,6 +17,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/img_logo"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/photo_default" />
@@ -32,6 +33,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/tv_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -42,6 +44,7 @@
                         tools:text="哈哈哈哈哈哈" />
 
                     <TextView
+                        android:id="@+id/tv_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -61,6 +64,7 @@
                     android:layout_weight="1" />
 
                 <LinearLayout
+                    android:id="@+id/lin_like"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
@@ -68,6 +72,7 @@
 
 
                     <TextView
+                        android:id="@+id/tv_like_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -93,6 +98,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
@@ -109,6 +115,7 @@
             android:descendantFocusability="blocksDescendants">
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
