--- a/app/src/main/res/layout/layout_message_detail.xml
+++ b/app/src/main/res/layout/layout_message_detail.xml
@@ -17,6 +17,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
@@ -24,9 +25,9 @@
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:text="sdfsdfsdfsdfsdfsfesdfsdfsfs"
                 android:textColor="@color/text_black_cd"
-                android:textSize="18dp" />
+                android:textSize="18dp"
+                tools:text="sdfsdfsdfsdfsdfsfesdfsdfsfs" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -37,14 +38,14 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:paddingTop="5dp"
-
-                    android:text="sdfsdfsdfsdfsdf"
                     android:textColor="@color/app_text_gray"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    tools:text="sdfsdfsdfsdfsdf" />
 
                 <View
                     android:layout_width="0dp"
@@ -52,16 +53,18 @@
                     android:layout_weight="1" />
 
                 <TextView
+                    android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingRight="10dp"
-                    android:text="sdfsdfsdfsdfsdf"
                     android:textColor="@color/app_text_gray"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    tools:text="sdfsdfsdfsdfsdf" />
 
             </LinearLayout>
 
             <TextView
+                android:id="@+id/tv_from"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/layout_left_interval"
@@ -70,15 +73,18 @@
                 android:paddingBottom="10dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:paddingTop="5dp"
-                android:text="sdfsdfsdfsdfsdf"
+                android:paddingTop="10dp"
                 android:textColor="@color/app_text_gray"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:text="sdfsdfsdfsdfsdf" />
 
 
-            <TextView
+            <WebView
+                android:id="@+id/webView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp" />
 
             <LinearLayout
@@ -90,15 +96,17 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/img_like"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
-                    android:src="@drawable/gave_a_like" />
+                    android:src="@drawable/gave_a_like_un" />
 
                 <TextView
+                    android:id="@+id/tv_like_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="90"
+                    tools:text="90"
                     android:textColor="@color/app_text_gray"
                     android:textSize="14sp" />
 
@@ -161,30 +169,33 @@
                 android:layout_height="10dp"
                 android:background="@color/page_bg" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:descendantFocusability="blocksDescendants"
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_msg_list_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="5dp"
                     android:paddingLeft="@dimen/layout_left_interval"
+                    android:paddingTop="5dp"
                     android:text="@string/recommended_note"
                     android:textColor="@color/text_black_cd"
                     android:textSize="17sp" />
 
-
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerView_recommended"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_msg_list_title">
 
                 </android.support.v7.widget.RecyclerView>
 
-            </LinearLayout>
+
+            </RelativeLayout>
 
 
             <View
@@ -193,29 +204,33 @@
                 android:background="@color/page_bg" />
 
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:descendantFocusability="blocksDescendants"
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_hot_comment_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="5dp"
                     android:paddingLeft="@dimen/layout_left_interval"
+                    android:paddingTop="5dp"
                     android:text="@string/hot_comments"
                     android:textColor="@color/text_black_cd"
                     android:textSize="17sp" />
 
 
                 <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView_hot_comment"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_hot_comment_title">
 
                 </android.support.v7.widget.RecyclerView>
 
-            </LinearLayout>
+            </RelativeLayout>
 
 
             <View
@@ -223,16 +238,18 @@
                 android:layout_height="10dp"
                 android:background="@color/page_bg" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:descendantFocusability="blocksDescendants"
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_new_comment_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
                     android:paddingLeft="@dimen/layout_left_interval"
                     android:text="@string/bast_new_comments"
                     android:textColor="@color/text_black_cd"
@@ -240,12 +257,14 @@
 
 
                 <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView_new_comment"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_new_comment_title">
 
                 </android.support.v7.widget.RecyclerView>
 
-            </LinearLayout>
+            </RelativeLayout>
 
 
         </LinearLayout>
