新增 我的收藏

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -80,6 +80,7 @@
 
 
                 <com.cdkj.baselibrary.views.RowInfoLayout
+                    android:id="@+id/row_collection"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:img_left="@drawable/user_collection"
