--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="app_text_gray">#818181</color>
     <color name="app_text_gray_2">#9e9e9e</color>
     <color name="app_text_gray_3">#595a6e</color>
-    <color name="market_item_bg">#fafcff</color>
+    <color name="item_bg_other">#fafcff</color>
 
     <color name="app_indicator_color">#2F93ED</color>
     <color name="app_hint_color">#898989</color>
