新增 币种 行情相关 列表

--- a/app/src/main/res/layout/item_market_platform.xml
+++ b/app/src/main/res/layout/item_market_platform.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lin_bg"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -23,13 +25,14 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_platform"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="sdfsdfsd"
                     android:textColor="@color/text_black_cd"
-                    android:textSize="17sp" />
+                    android:textSize="17sp"
+                    tools:text="sdfsdfsd" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -37,21 +40,22 @@
                     android:layout_marginLeft="5dp"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="sdfsdfsd"
                     android:textColor="@color/app_text_gray"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    tools:text="sdfsdfsd" />
             </LinearLayout>
 
 
             <TextView
+                android:id="@+id/tv_coin_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="sdfsdfsd"
                 android:textColor="@color/app_text_gray"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                tools:text="sdfsdfsd" />
 
         </LinearLayout>
 
@@ -68,23 +72,25 @@
 
 
             <TextView
+                android:id="@+id/tv_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="sdfsdfsd"
                 android:textColor="@color/text_black_cd"
-                android:textSize="17sp" />
+                android:textSize="17sp"
+                tools:text="sdfsdfsd" />
 
             <TextView
+                android:id="@+id/tv_price_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="sdfsdfsd"
                 android:textColor="@color/app_text_gray_3"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                tools:text="sdfsdfsd" />
 
         </LinearLayout>
 
@@ -92,14 +98,15 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="15dp"
         android:background="@drawable/market_green_bg"
-        android:text="sdfsfs"
         android:textColor="@color/white"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        tools:text="sdfsfs" />
 
 
 </LinearLayout>
