--- a/app/src/main/res/layout/item_market_platform_money.xml
+++ b/app/src/main/res/layout/item_market_platform_money.xml
@@ -18,6 +18,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_platform"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -27,6 +28,7 @@
                 android:textSize="17sp" />
 
             <TextView
+                android:id="@+id/tv_coin_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
