--- a/app/src/main/res/layout/item_market_add_done.xml
+++ b/app/src/main/res/layout/item_market_add_done.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.mcxtzhang.swipemenulib.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -30,9 +31,9 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="sdfsdfsd"
                     android:textColor="@color/text_black_cd"
-                    android:textSize="17sp" />
+                    android:textSize="17sp"
+                    tools:text="sdfsdfsd" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -40,9 +41,9 @@
                     android:layout_marginTop="7dp"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="sdfsdfsd"
                     android:textColor="@color/app_text_gray"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    tools:text="sdfsdfsd" />
 
             </LinearLayout>
 
@@ -61,9 +62,9 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="sdfsdfsd"
                     android:textColor="@color/text_black_cd"
-                    android:textSize="17sp" />
+                    android:textSize="17sp"
+                    tools:text="sdfsdfsd" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -71,9 +72,9 @@
                     android:layout_marginTop="7dp"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:text="sdfsdfsd"
                     android:textColor="@color/app_text_gray_3"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    tools:text="sdfsdfsd" />
 
             </LinearLayout>
 
@@ -86,31 +87,31 @@
             android:layout_gravity="center"
             android:layout_marginLeft="15dp"
             android:background="@drawable/market_green_bg"
-            android:text="sdfsfs"
             android:textColor="@color/white"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            tools:text="sdfsfs" />
 
 
     </LinearLayout>
 
     <!-- 以下都是侧滑菜单的内容依序排列 -->
     <Button
-        android:textSize="15sp"
         android:id="@+id/btn_to_top"
         android:layout_width="65dp"
         android:layout_height="match_parent"
         android:background="#c3c3c3"
         android:text="@string/to_top"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        android:textSize="15sp" />
 
     <Button
-        android:textSize="15sp"
         android:id="@+id/btn_delete"
         android:layout_width="65dp"
         android:layout_height="match_parent"
         android:background="#ff4545"
         android:text="@string/delete"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        android:textSize="15sp" />
 
 
 </com.mcxtzhang.swipemenulib.SwipeMenuLayout>
