--- a/app/src/main/res/layout/item_market_coin_platform.xml
+++ b/app/src/main/res/layout/item_market_coin_platform.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lin_bg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="horizontal"
     android:padding="15dp">
 
 
     <TextView
+        android:id="@+id/tv_platform"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text="sdfsdfsd"
+        tools:text="sdfsdfsd"
         android:textColor="@color/text_black_cd"
         android:textSize="17sp" />
 
     <TextView
+        android:id="@+id/tv_coin_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="5dp"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text="sdfsdfsd"
+        tools:text="sdfsdfsd"
         android:textColor="@color/app_text_gray"
         android:textSize="12sp" />
 
@@ -45,21 +49,23 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="sdfsdfsd"
+                tools:text="sdfsdfsd"
                 android:textColor="@color/text_black_cd"
                 android:textSize="17sp" />
 
             <TextView
+                android:id="@+id/tv_price_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="sdfsdfsd"
+                tools:text="sdfsdfsd"
                 android:textColor="@color/app_text_gray"
                 android:textSize="15sp" />
 
@@ -69,12 +75,13 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_state"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:background="@drawable/market_green_bg"
-        android:text="sdfsfs"
+        tools:text="sdfsfs"
         android:textColor="@color/white"
         android:textSize="15sp" />
 
