新增 行情自选

--- a/app/src/main/res/layout/layout_marketpage_title.xml
+++ b/app/src/main/res/layout/layout_marketpage_title.xml
@@ -11,6 +11,7 @@
         android:paddingTop="5dp">
 
         <FrameLayout
+            android:id="@+id/fra_add_market"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp">
