--- a/app/src/main/res/layout/item_market_add.xml
+++ b/app/src/main/res/layout/item_market_add.xml
@@ -1,43 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="horizontal"
-    android:padding="15dp">
+    android:paddingRight="0dp">
 
 
     <TextView
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text="sdfsdfsd"
         android:textColor="@color/text_black_cd"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        tools:text="sdfsdfsd" />
 
     <TextView
+        android:id="@+id/tv_name_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="5dp"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text="sdfsdfsd"
         android:textColor="@color/app_text_gray"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        tools:text="sdfsdfsd" />
 
     <View
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/add_market_big" />
+    <FrameLayout
+        android:id="@+id/fra_add"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/img_add_state"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            tools:src="@drawable/add_market_big" />
+    </FrameLayout>
 
 
 </LinearLayout>
