新增 行情自选 置顶 删除操作

--- a/app/src/main/res/layout/item_market_add.xml
+++ b/app/src/main/res/layout/item_market_add.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="horizontal"
+    android:paddingLeft="15dp"
     android:paddingRight="0dp">
 
 
