--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,7 @@
 
     <color name="app_indicator_color">#2F93ED</color>
     <color name="app_hint_color">#898989</color>
+    <color name="market_gray">#979797</color>
+    <color name="market_green">#1fc07d</color>
+    <color name="market_red">#ff5757</color>
 </resources>
