--- a/app/src/main/res/layout/item_market_platform.xml
+++ b/app/src/main/res/layout/item_market_platform.xml
@@ -67,11 +67,10 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="right"
             android:orientation="vertical">
-
 
             <TextView
                 android:id="@+id/tv_price"
@@ -90,8 +89,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:ellipsize="end"
-                android:singleLine="true"
                 android:textColor="@color/app_text_gray_3"
                 android:textSize="12sp"
                 tools:text="sdfsdfsd" />
